Se añade el titulo, y los parrafos al documento.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>Este es mi archivo compartido</title>
 </head>
 <body>
-    
+    <h1>Ayer aprendí esto</h1>
+    <p>
+        Ayer se hablo sobre el cifrado ssh este cifrado costa de dos partes una llave publica y una llave privada este sifrado <br />
+        permite compartir información cifrada por internet lo unico que necesitas es compartir tu llave publica con otros para <br />
+        que sifren el contenido que quieran enviarte despues de que te lo envian este es sifrado junto con la <strong>llave privada</strong> <br />
+        ojo nunca des tu <strong>LLAVE PRIVADA</strong> ya que si la compartes pueden cifrar cualquier información que envies por internet <br />
+        <br />
+        Las llaves publicas tambien las puedes añadir a github en las opciones de settings y llaves ssh "keys ssh" esto permite subir <br />
+        información a un repositorio de manera mas segura ya que no compartes tus contraseñas por internet y evitas que tambien que escribirla<br />
+        ya que con las llaves en el repositorio este automaticamente subira los archivos a este repositorio.  
+    </p>
+    <p>
+        Tambien aprendimos de como hacer tags y esto se hace con el $ git tag -a nombre del tag + #commit al que se le quiera agregar <br />
+        el tag para borrar se usa $ tag -d + nombre del tag para eliminar. para subir los tag a un repositorio en linea usas $git push origin --tags  <br />
+        y para borrar del repositorio remoto se usa el $git push origin :refs/tags/nombre del tag ojo esto hay que hacerlo luego de eliinar y <br />
+        subir el tag normalmente.
+    </p>
 </body>
 </html>
