Se crea en la rama java el boton y la imagen de los comandos

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         y para borrar del repositorio remoto se usa el $git push origin :refs/tags/nombre del tag ojo esto hay que hacerlo luego de eliinar y <br />
         subir el tag normalmente.
     </p>
+    <input type="button" value="Comandos" id="botoncito">
+    <script src="java/java.js"></script>
 </body>
 </html>
