--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Este es mi archivo compartido</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Ayer aprendí esto</h1>
-    <p>
+    <h1 id="H">Ayer aprendí esto</h1>
+    <p id="Parrafo1">
         Ayer se hablo sobre el cifrado ssh este cifrado costa de dos partes una llave publica y una llave privada este sifrado <br />
         permite compartir información cifrada por internet lo unico que necesitas es compartir tu llave publica con otros para <br />
         que sifren el contenido que quieran enviarte despues de que te lo envian este es sifrado junto con la <strong>llave privada</strong> <br />
@@ -16,7 +17,7 @@
         información a un repositorio de manera mas segura ya que no compartes tus contraseñas por internet y evitas que tambien que escribirla<br />
         ya que con las llaves en el repositorio este automaticamente subira los archivos a este repositorio.  
     </p>
-    <p>
+    <p id="Parrafo2">
         Tambien aprendimos de como hacer tags y esto se hace con el $ git tag -a nombre del tag + #commit al que se le quiera agregar <br />
         el tag para borrar se usa $ tag -d + nombre del tag para eliminar. para subir los tag a un repositorio en linea usas $git push origin --tags  <br />
         y para borrar del repositorio remoto se usa el $git push origin :refs/tags/nombre del tag ojo esto hay que hacerlo luego de eliinar y <br />
