Se agrega un nuevo boton con la información de ayer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         subir el tag normalmente.
     </p>
     <input type="button" value="Comandos" id="botoncito">
+    <input type="button" value="next" id="boton">
     <script src="java/java.js"></script>
 </body>
 </html>
